@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -375,7 +375,7 @@ class ExecutableInputMethodManager extends InputMethodManager
                     variant = localeString.substring(postIndex + 1);
                 }
             }
-            Locale locale = new Locale(language, country, variant);
+            Locale locale = Locale.of(language, country, variant);
             locator = locator.deriveLocator(locale);
         }
 
@@ -550,8 +550,8 @@ class ExecutableInputMethodManager extends InputMethodManager
         if (preferredLocale.equals(Locale.KOREA)) {
             preferredLocale = Locale.KOREAN;
         }
-        if (preferredLocale.equals(new Locale("th", "TH"))) {
-            preferredLocale = new Locale("th");
+        if (preferredLocale.equals(Locale.of("th", "TH"))) {
+            preferredLocale = Locale.of("th");
         }
 
         // obtain node
@@ -623,10 +623,10 @@ class ExecutableInputMethodManager extends InputMethodManager
                 advertised = Locale.KOREAN;
             }
         } else if (locale.getLanguage().equals("th")) {
-            if (locator.isLocaleAvailable(new Locale("th", "TH"))) {
-                advertised = new Locale("th", "TH");
-            } else if (locator.isLocaleAvailable(new Locale("th"))) {
-                advertised = new Locale("th");
+            if (locator.isLocaleAvailable(Locale.of("th", "TH"))) {
+                advertised = Locale.of("th", "TH");
+            } else if (locator.isLocaleAvailable(Locale.of("th"))) {
+                advertised = Locale.of("th");
             }
         }
 
