@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -179,7 +179,7 @@ public class LogRecord implements java.io.Serializable {
 
     /**
      * Synthesizes a pseudo unique integer value from a long {@code id} value.
-     * For backward compatibility with previous releases,the returned integer is
+     * For backward compatibility with previous releases, the returned integer is
      * such that for any positive long less than or equals to {@code Integer.MAX_VALUE},
      * the returned integer is equal to the original value.
      * Otherwise - it is synthesized with a best effort hashing algorithm,
@@ -221,7 +221,7 @@ public class LogRecord implements java.io.Serializable {
         message = msg;
         // Assign a thread ID and a unique sequence number.
         sequenceNumber = globalSequenceNumber.getAndIncrement();
-        long id = Thread.currentThread().getId();
+        long id = Thread.currentThread().threadId();
         // threadID is deprecated and this value is synthesised for backward compatibility
         threadID = shortThreadID(id);
         longThreadID = id;
