@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -111,7 +111,7 @@ public class CalendarTestEngine {
                                 var = sc.next();
                             }
                         }
-                        locale = new Locale(lang, country, var);
+                        locale = Locale.of(lang, country, var);
                     }
                     break;
 
