@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,7 +22,7 @@
  */
 /*
  * @test
- * @bug 4965260 8008577
+ * @bug 4965260 8008577 8287868
  * @modules jdk.localedata
  * @summary Verifies the language name of "nl" for supported locales
  * @run main/othervm -Djava.locale.providers=JRE,SPI Bug4965260
@@ -34,18 +34,18 @@ public class Bug4965260  {
 
     // Define supported locales
     static Locale[] locales2Test = new Locale[] {
-        new Locale("de"),
-        new Locale("es"),
-        new Locale("fr"),
-        new Locale("it"),
-        new Locale("sv")
+        Locale.GERMAN,
+        Locale.of("es"),
+        Locale.FRENCH,
+        Locale.ITALIAN,
+        Locale.of("sv")
     };
 
     static String[] expectedNames = new String[] {
         "Niederl\u00e4ndisch",
         "neerland\u00e9s",
         "n\u00e9erlandais",
-        "neerlandese",
+        "olandese",
         "nederl\u00e4ndska"
     };
 
@@ -58,7 +58,7 @@ public class Bug4965260  {
             }
 
             StringBuffer message = new StringBuffer("");
-            Locale dutch = new Locale("nl", "BE");
+            Locale dutch = Locale.of("nl", "BE");
             String current;
             for (int i = 0; i < locales2Test.length; i++) {
                 Locale locale = locales2Test[i];
